# mini-castor

./: README.md  demo.py  mini_castor.py  pyproject.toml
blog/: do-llm-agents-need-an-os.md
tests/: test_mini_castor.py
